syntax = "proto3";

package gtd.common;

option go_package = "internal/";

import "google/protobuf/timestamp.proto";

message Item {
  string title = 1;
  string description = 2;
  bool is_deleted = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}
